# zin_lib

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: debug.rs  error.rs  lib.rs  stringify.rs  zstring.rs
src/api/: ast.rs  executor.rs  lexer.rs  mod.rs  node.rs
src/object/: access.rs  function.rs  interpreter.rs  mod.rs  obj.rs
src/object/zstd/: ast.rs  builtin.rs  import_system.rs  io.rs  json.rs  mod.rs  system.rs  zin.rs  zpath.rs
src/types/: hashmap.rs  mod.rs  number.rs  ops.rs  refrence.rs  value.rs
zin/: Cargo.toml
zin/src/: main.rs
zin/zstd/: runtime_core.zin  vector.z
