[package]
name = "zin_lib"
version = "0.1.0"
edition = "2018"
[profile.release]
lto = true
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
defaultable = []
[dependencies]
gc = { version = "*", features = ["derive"] }
logos="*"
pomelo="*"
indexmap="*"
home="*"
bitflags="1.2.1"
float_eq = "*"
dirs="*"